Hair Radius Is Actually Hair Diameter #70821

Closed
opened 2019-10-14 23:27:49 +02:00 by James · 19 comments

2.80 Released

Testing hair radius. Set hair to one strand. Set radius 1m and scale to 1. Base of hair strand appears to be 1m in diameter. Is 1m radius not 2m in diameter?hair strand.blend

2.80 Released Testing hair radius. Set hair to one strand. Set radius 1m and scale to 1. Base of hair strand appears to be 1m in diameter. Is 1m radius not 2m in diameter?[hair strand.blend](https://archive.blender.org/developer/F7818289/hair_strand.blend)
Author

Added subscriber: @James8569

Added subscriber: @James8569
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

When I try to render this file, I get a segfault. But that is unrelated to the issue you describe.

BKE_object_is_visible_in_viewport(const struct View3D * v3d, const struct Object * ob) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:1068)
rna_Object_visible_in_viewport_get(Object * ob, View3D * v3d) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_object_api.c:289)
Object_visible_in_viewport_get_func(struct Object * _self, struct View3D * viewport) (/home/jacques/blender-git/build_linux_debug/source/blender/makesrna/intern/rna_object_gen.c:3153)
BL::Object::visible_in_viewport_get(BL::Object * const this, BL::SpaceView3D & viewport) (/home/jacques/blender-git/build_linux_debug/source/blender/makesrna/intern/RNA_blender_cpp.h:50291)
ccl::BlenderSync::sync_objects(ccl::BlenderSync * const this, BL::Depsgraph & b_depsgraph, BL::SpaceView3D & b_v3d, float motion_time) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_object.cpp:558)
ccl::BlenderSync::sync_data(ccl::BlenderSync * const this, BL::RenderSettings & b_render, BL::Depsgraph & b_depsgraph, BL::SpaceView3D & b_v3d, BL::Object & b_override, int width, int height, void ** python_thread_state) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_sync.cpp:218)
ccl::BlenderSession::render(ccl::BlenderSession * const this, BL::Depsgraph & b_depsgraph_) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_session.cpp:526)
ccl::render_func(PyObject * args) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_python.cpp:283)
libpython3.7m.so.1.0!_PyMethodDef_RawFastCallKeywords (Unknown Source:0)
libpython3.7m.so.1.0!_PyCFunction_FastCallKeywords (Unknown Source:0)
libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0)
libpython3.7m.so.1.0!_PyEval_EvalFrameDefault (Unknown Source:0)
pydevd_frame_evaluator.cpython-37m-x86_64-linux-gnu.so!__pyx_f_18_pydevd_frame_eval_22pydevd_frame_evaluator_get_bytecode_while_frame_eval(PyFrameObject * __pyx_v_frame_obj, int __pyx_v_exc) (/io/ptvsd/src/ptvsd/_vendored/pydevd/_pydevd_frame_eval/pydevd_frame_evaluator.c:6404)
libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0)
libpython3.7m.so.1.0!_PyEval_EvalFrameDefault (Unknown Source:0)
pydevd_frame_evaluator.cpython-37m-x86_64-linux-gnu.so!__pyx_f_18_pydevd_frame_eval_22pydevd_frame_evaluator_get_bytecode_while_frame_eval(PyFrameObject * __pyx_v_frame_obj, int __pyx_v_exc) (/io/ptvsd/src/ptvsd/_vendored/pydevd/_pydevd_frame_eval/pydevd_frame_evaluator.c:6404)
libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0)
libpython3.7m.so.1.0!_PyFunction_FastCallDict (Unknown Source:0)
bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_rna.c:8328)
engine_render(RenderEngine * engine, Depsgraph * depsgraph) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_render.c:170)
RE_engine_render(Render * re, int do_all) (/home/jacques/blender-git/blender/source/blender/render/intern/source/external_engine.c:778)
do_render_3d(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1165)
do_render(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1242)
do_render_composite(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1463)
do_render_all_options(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1726)
RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const _Bool write_still) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:2128)
render_startjob(void * rjv, short * stop, short * do_update, float * progress) (/home/jacques/blender-git/blender/source/blender/editors/render/render_internal.c:668)
do_job_thread(void * job_v) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:383)
tslot_thread_start(void * tslot_p) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/threads.c:260)
libpthread.so.0!start_thread(void * arg) (/build/glibc-4WA41p/glibc-2.30/nptl/pthread_create.c:479)
libc.so.6!clone() (/build/glibc-4WA41p/glibc-2.30/sysdeps/unix/sysv/linux/x86_64/clone.S:95)
When I try to render this file, I get a segfault. But that is unrelated to the issue you describe. ``` BKE_object_is_visible_in_viewport(const struct View3D * v3d, const struct Object * ob) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:1068) rna_Object_visible_in_viewport_get(Object * ob, View3D * v3d) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_object_api.c:289) Object_visible_in_viewport_get_func(struct Object * _self, struct View3D * viewport) (/home/jacques/blender-git/build_linux_debug/source/blender/makesrna/intern/rna_object_gen.c:3153) BL::Object::visible_in_viewport_get(BL::Object * const this, BL::SpaceView3D & viewport) (/home/jacques/blender-git/build_linux_debug/source/blender/makesrna/intern/RNA_blender_cpp.h:50291) ccl::BlenderSync::sync_objects(ccl::BlenderSync * const this, BL::Depsgraph & b_depsgraph, BL::SpaceView3D & b_v3d, float motion_time) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_object.cpp:558) ccl::BlenderSync::sync_data(ccl::BlenderSync * const this, BL::RenderSettings & b_render, BL::Depsgraph & b_depsgraph, BL::SpaceView3D & b_v3d, BL::Object & b_override, int width, int height, void ** python_thread_state) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_sync.cpp:218) ccl::BlenderSession::render(ccl::BlenderSession * const this, BL::Depsgraph & b_depsgraph_) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_session.cpp:526) ccl::render_func(PyObject * args) (/home/jacques/blender-git/blender/intern/cycles/blender/blender_python.cpp:283) libpython3.7m.so.1.0!_PyMethodDef_RawFastCallKeywords (Unknown Source:0) libpython3.7m.so.1.0!_PyCFunction_FastCallKeywords (Unknown Source:0) libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0) libpython3.7m.so.1.0!_PyEval_EvalFrameDefault (Unknown Source:0) pydevd_frame_evaluator.cpython-37m-x86_64-linux-gnu.so!__pyx_f_18_pydevd_frame_eval_22pydevd_frame_evaluator_get_bytecode_while_frame_eval(PyFrameObject * __pyx_v_frame_obj, int __pyx_v_exc) (/io/ptvsd/src/ptvsd/_vendored/pydevd/_pydevd_frame_eval/pydevd_frame_evaluator.c:6404) libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0) libpython3.7m.so.1.0!_PyEval_EvalFrameDefault (Unknown Source:0) pydevd_frame_evaluator.cpython-37m-x86_64-linux-gnu.so!__pyx_f_18_pydevd_frame_eval_22pydevd_frame_evaluator_get_bytecode_while_frame_eval(PyFrameObject * __pyx_v_frame_obj, int __pyx_v_exc) (/io/ptvsd/src/ptvsd/_vendored/pydevd/_pydevd_frame_eval/pydevd_frame_evaluator.c:6404) libpython3.7m.so.1.0![Unknown/Just-In-Time compiled code] (Unknown Source:0) libpython3.7m.so.1.0!_PyFunction_FastCallDict (Unknown Source:0) bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_rna.c:8328) engine_render(RenderEngine * engine, Depsgraph * depsgraph) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_render.c:170) RE_engine_render(Render * re, int do_all) (/home/jacques/blender-git/blender/source/blender/render/intern/source/external_engine.c:778) do_render_3d(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1165) do_render(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1242) do_render_composite(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1463) do_render_all_options(Render * re) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:1726) RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const _Bool write_still) (/home/jacques/blender-git/blender/source/blender/render/intern/source/pipeline.c:2128) render_startjob(void * rjv, short * stop, short * do_update, float * progress) (/home/jacques/blender-git/blender/source/blender/editors/render/render_internal.c:668) do_job_thread(void * job_v) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:383) tslot_thread_start(void * tslot_p) (/home/jacques/blender-git/blender/source/blender/blenlib/intern/threads.c:260) libpthread.so.0!start_thread(void * arg) (/build/glibc-4WA41p/glibc-2.30/nptl/pthread_create.c:479) libc.so.6!clone() (/build/glibc-4WA41p/glibc-2.30/sysdeps/unix/sysv/linux/x86_64/clone.S:95) ```

Added subscriber: @mano-wii

Added subscriber: @mano-wii
William Reynish was assigned by Germano Cavalcante 2019-10-15 16:43:14 +02:00

I can confirm.
Radius is being diameter in this case.
In blender 2.79 it was called Thickness.

I can confirm. Radius is being diameter in this case. In blender 2.79 it was called Thickness.
Author

What would be the impact of renaming it in the future?

What would be the impact of renaming it in the future?
Author

Added subscriber: @jacques-3

Added subscriber: @jacques-3
Author

This comment was removed by @James8569

*This comment was removed by @James8569*
Author

@"Jacques Lucke (JacquesLucke)"

That's a bit of a worry. Which version of Blender did you use?

@"Jacques Lucke (JacquesLucke)" That's a bit of a worry. Which version of Blender did you use?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

The render segfault should be fixed already, see 7df7a8f3f1

The render segfault should be fixed already, see 7df7a8f3f1

Added subscriber: @Chipe1

Added subscriber: @Chipe1
William Reynish was unassigned by Dalai Felinto 2019-12-23 13:46:59 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Author

I'm not sure anyone has looked into the actual issue here? In the file there is a 1x1m plane. In one corner (when rendered) there is a hair. The hair has a radius setting of 1 and a scale of 1 and should be 2 metres in diameter but it is 1 metre in diameter...

I'm not sure anyone has looked into the actual issue here? In the file there is a 1x1m plane. In one corner (when rendered) there is a hair. The hair has a radius setting of 1 and a scale of 1 and should be 2 metres in diameter but it is 1 metre in diameter...
Author

It's just the wrong text label in the UI I think.

It's just the wrong text label in the UI I think.

We could just fix the UI label. I can easily do that

We could just fix the UI label. I can easily do that

This issue was referenced by blender/cycles@2da6c203da

This issue was referenced by blender/cycles@2da6c203da78a6138aa5ee1a1e9d328be3623d5d

This issue was referenced by 3a35301fd1

This issue was referenced by 3a35301fd16d9230932a148f0cf64ed6bef9e38b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
William Reynish self-assigned this 2020-01-06 21:55:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70821
No description provided.