Fix T70821: Hair Radius Is Actually Hair Diameter

Renamed hair tip and root properties to be called diameter rather than radius. The old name was incorrect.